--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
 		"@sveltejs/adapter-static": "^3.0.2",
 		"@sveltejs/kit": "^2.5.17",
 		"@sveltejs/vite-plugin-svelte": "3.1.1",
+		"@threlte/core": "^7.3.1",
+		"@threlte/extras": "^8.11.4",
+		"@threlte/rapier": "^2.0.1",
 		"archieml": "^0.5.0",
 		"autoprefixer": "^10.4.19",
 		"bits-ui": "^0.21.10",
@@ -30,6 +33,9 @@
 		"svelte": "^4.2.18",
 		"svelte-copy": "^1.4.2",
 		"svelte-preprocess": "^6.0.1",
+		"three": "^0.165.0",
+		"three-csg-ts": "^3.2.0",
+		"three-perf": "^1.0.10",
 		"vite": "^5.3.1",
 		"vite-plugin-svgstring": "^1.0.0"
 	},
