--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
 	"engines": {
 		"node": ">= 18.12.0"
 	},
-	"browserslist": "> 0.5%, last 4 versions, not ie <= 11, not ie_mob <= 11"
+	"browserslist": "> 0.5%, last 4 versions, not ie <= 11, not ie_mob <= 11",
+	"dependencies": {
+		"@threlte/core": "^7.3.1",
+		"@threlte/extras": "^8.11.5"
+	}
 }
